@@ -1,8 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
-Date: ????
+Date: 2025-03-08
   Bugfixes:
     - Logistic requests of vehicles will be preserved when vehicle are put back in the player's inventory
+    - Fixed equipment shield and energy level not being preserved
+    - Fixed a mod crash when placing a vehicle with ghost equipment
   Changes:
     - Improved code for getting out of vehicles
 ---------------------------------------------------------------------------------------------------
